fixing wave color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ button.menu-toggle{
 
 
 .title{
-	background-color: #black;
+	background-color: black;
 	background-image: url("../images/three_shops.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
